cmake_minimum_required(VERSION 3.16)
project(ADT)

set(CMAKE_CXX_STANDARD 14)

add_executable(ADT src/main.cpp src/SqL.cpp src/CDLL.cpp inc/SqS.h inc/SqL.h inc/CDLL.h inc/def.h inc/main.h src/SqS.cpp inc/SLL.h src/SLL.cpp inc/SLLS.h src/SLLS.cpp inc/CSqQ.h inc/DLL.h src/DLL.cpp src/CSqQ.cpp inc/SLLQ.h src/SLLQ.cpp src/DQ.cpp inc/DQ.h inc/Str.h src/Str.cpp inc/BiTree.h src/BiTree.cpp inc/Graphy.h src/Graphy.cpp inc/heap.h src/heap.cpp inc/BST.h src/BST.cpp)